--- a/plasmac2.adoc
+++ b/plasmac2.adoc
@@ -1675,7 +1675,7 @@ where `n.n` is the offset of the probe from the torch center in machine units fo
 Each of these parameters is optional and also may appear in any order. If a parameter is not detected then the default is 0.0. There can be no space after the X or Z, lower case is permissible.
 
 When this variable appears in the INI file with either X or Y not equal to zero then plasmac2 will do all `Ohmic Probing` as `Offset Probing`.
-If Offset Probing is valid then the feed rate at which the X and Y axes move to the offset position may be adjusted by the use of the *Offset Speed* parameter in the PROBING frame of the <<plasmac2:parameters-page,PARAMETERS Page>>.
+If Offset Probing is valid then the feed rate at which the X and Y axes move to the offset position may be adjusted by the use of the `Offset Speed` parameter in the PROBING frame of the <<plasmac2:parameters-page,PARAMETERS Page>>.
 
 When a probe sequence has begun, the `plasmac.ohmic-enable` pin will be set True causing the probe to extend. When the material is detected the `plasmac.ohmic-enable` pin will be reset to false causing the probe to retract.
 
