docs: add g92 offset statement

--- a/plasmac2.adoc
+++ b/plasmac2.adoc
@@ -1105,7 +1105,7 @@ There are 20 user buttons available but not all may be displayed depending on th
 Once plasmac2 is successfully installed, no Z axis motion is required to be part of the G-code cut program.
 In fact, if any Z axis references are present in the cut program, the standard plasmac2 configuration will remove them during the program loading process.
 
-For reliable use of plasmac2 the user should NOT use any Z axis offsets other than the coordinate system offsets (`G54`-`G59.3`).
+For reliable use of plasmac2 the user should NOT use any Z axis offsets other than the coordinate system offsets (`G54`-`G59.3`). For this reason, G92 offsets have been disabled across the GUI.
 
 plasmac2 will automatically add a line of G-code to move the Z axis to the correct height at the beginning of every G-code program.
 
